- First version of FD_SOCK2 (https://issues.redhat.com/browse/JGRP-2521) - Added closeConnection(Address) to BaseServer - Creating a ServerSocket now throws an exception when unsuccessful - Calling finishConnect() directly after connect() returns false - Changed HashMap in BaseServer to CCHM (sendToAll() is not synchronized) - Removed synchronized from some methods in BaseServer - Updated manual - Removed bind_port from FD_SOCK2 (computed dynamically) - Replaced FD_SOCK with FD_SOCK2 in all sample configurations